--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Yash Mathur",
   "license": "MIT",
   "dependencies": {
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.9.9",
+    "nodejs": "^0.0.0"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.4.1",
@@ -25,6 +26,8 @@
     "ethers": "^5.6.8",
     "hardhat-deploy": "^0.11.10",
     "hardhat-gas-reporter": "^1.0.4",
+    "http": "^0.0.1-security",
+    "http-server": "^14.1.1",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
